mano-cli/src/snapshots/mano__report__tests__report_error_renders_multibyte_utf8_spans.snap
---
source: mano-cli/src/report.rs
expression: result
---
Error: Tá moscando, Brown?
   ╭─[ :4:2 ]
   │
 4 │ "e aí mano
   │  ─────┬────  
   │       ╰────── Cadê o fecha aspas?
───╯
